--- a/recommender/users/templates/signup.html
+++ b/recommender/users/templates/signup.html
@@ -12,10 +12,12 @@
     {% endblock js_cdn %}
 
 
-    <div class="min-h-screen flex items-center justify-center w-full bg-white" id="auth" style="background-color: white">
+    <div class="min-h-screen flex items-center justify-center w-full bg-white" id="auth"
+         style="background-color: white">
         <div class="bg-white p-8 rounded-lg shadow-md w-full max-w-sm">
 
-            <form method="POST" action="/signup/" class="max-w-sm mx-auto bg-white p-6 shadow-md rounded-lg border bg-white">
+            <form method="POST" action="/signup/"
+                  class="max-w-sm mx-auto bg-white p-6 shadow-md rounded-lg border bg-white">
                 {% csrf_token %}
                 <div class="mb-5">
                     <label for="name" class="block mb-2 text-sm font-medium text-gray-900">Username</label>
@@ -76,6 +78,7 @@
         </div>
     </div>
 
+
     <script>
         $(document).ready(function () {
             {% if messages %}
@@ -86,6 +89,8 @@
                 $('#feedback-modal').addClass('hidden');
             });
         });
+
+
     </script>
 
 
