google sign in configuration

--- a/recommender/users/templates/signin.html
+++ b/recommender/users/templates/signin.html
@@ -46,7 +46,7 @@
 
                 <!-- Google Sign-In Button -->
                 <div id="g_id_onload"
-                     data-client_id="1051342845649-8qlcc0h41kq2sf3dakaogfdgv2omks4p.apps.googleusercontent.com"
+                     data-client_id={{ GOOGLE_CLIENT_ID }}
                      data-callback="handleCredentialResponse"
                      data-auto_prompt="false">
                 </div>
